--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,18 @@
 <link rel="shortcut icon" href="#" />
 
 <head>
-    <title>Hi</title>
+    <title>Archi Diagram to SVG</title>
 
 </head>
 
 <body onload="myLibrary.onDocumentLoad()">
-    <h1>Test2</h1>
+    <h1>Pure typescript Archi Diagram viewer</h1>
+    <p>
+    <a href="https://github.com/StefRave/archimate-diagram">See project on Github.</a>. Files viewed are not uploaded to a server and will not leave the browser.<br>
+    <a href="https://www.archimatetool.com/">The Open Source modelling toolkit for creating ArchiMate models and sketches.</a>
+    </p>
     <input id="fileUpload" type="file" name="fileUpload" />
-    <button id="uploadNutton" onclick="myLibrary.uploadFile()"> Upload </button>
+    <button id="uploadNutton" onclick="myLibrary.uploadFile()">View</button>
     <select name="views" id="projectView" onchange="myLibrary.onSelectView(projectView.value)"></select>
     <div id="svgTarget">
     </div>
