Migrate to jest
from other template https://github.com/hamzahamidi/webpack-typescript-starter.git

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Archi Diagram to SVG</title>
 </head>
-<body onload="myLibrary.onDocumentLoad()">
+<body>
     <h1>Pure typescript Archi Diagram viewer</h1>
     <p>
     <a href="https://github.com/StefRave/archimate-diagram">See project on Github.</a>. Files viewed are not uploaded to a server and will not leave the browser.<br>
