--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <a href="https://www.archimatetool.com/">The Open Source modelling toolkit for creating ArchiMate models and sketches.</a>
     </p>
     <input id="fileUpload" type="file" name="fileUpload" />
-    <button id="uploadNutton" onclick="myLibrary.uploadFile()">View</button>
-    <select name="views" id="projectView" onchange="myLibrary.onSelectView(projectView.value)"></select>
+    <button id="uploadNutton" onclick="my.uploadFile()">View</button>
+    <select name="views" id="projectView" onchange="my.onSelectView(projectView.value)"></select>
     <div id="svgTarget">
     </div>
 </body>
