--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <link rel="shortcut icon" href="#" />
 <head>
     <title>Archi Diagram to SVG</title>
+    <link rel="icon" href="data:,">
 </head>
 <body>
     <h1>Pure typescript Archi Diagram viewer</h1>
