--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="shortcut icon" href="#" />
 <head>
     <title>Archi Diagram to SVG</title>
-    <link rel="icon" href="data:,">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 <body>
     <h1>Pure typescript Archi Diagram viewer</h1>
