migrate from webpack to vite

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
       <div id="svgTarget" class="split split-horizontal">
       </div>
     </div>
+    <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
