Change modify bendpoints in svg

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Pure typescript Archi Diagram viewer</h1>
     <p>
-    <a href="https://github.com/StefRave/archimate-diagram">See project on Github.</a>. Files viewed are not uploaded to a server and will not leave the browser.<br>
-    <a href="https://www.archimatetool.com/">The Open Source modelling toolkit for creating ArchiMate models and sketches.</a>
+    <a href="https://github.com/StefRave/archimate-diagram">See project on Github.</a><br />
+    Render any <a href="https://www.archimatetool.com/"> model to SVG</a>
     </p>
     <input id="fileUpload" type="file" name="fileUpload" />
     <button id="uploadNutton" onclick="my.uploadFile()">View</button>
