View png or svg

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     Render any <a href="https://www.archimatetool.com/"> model to SVG</a>
     </p>
     <input id="fileUpload" type="file" name="fileUpload" />
-    <button id="uploadNutton" onclick="my.uploadFile()">View</button>
+    <button onclick="my.uploadFile()">Open File</button>
+    <button onclick="my.viewSvg()">View SVG</button>
+    <button onclick="my.viewPng()">View PNG</button>
     <div class="grid">
       <div id="leftThing" class="split split-horizontal" >
         <ul id="diagramTree">
