Use ArchiEditor  preact component

--- a/index.html
+++ b/index.html
@@ -14,21 +14,8 @@
     <a href="https://github.com/StefRave/archimate-diagram">See project on Github.</a>
     <br>
   </p>
-  <p>
-    <button onclick="my.uploadFile()">Open Achi File</button>
-    &nbsp;
-    <button onclick="my.downloadSvg()">Download SVG</button>
-    <button onclick="my.downloadPng()">Download PNG</button>
-  </p>
-  <div class="grid">
-    <div id="leftThing" class="split split-horizontal">
-      <ul id="diagramTree">
-      </ul>
-    </div>
-    <div class="vertical-gutter"></div>
-    <div id="svgTarget" class="split split-horizontal">
-    </div>
-  </div>
+
+  <section id="app"></section>
   <script type="module" src="/src/index.tsx"></script>
 </body>
 
